; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_make_transient_cache_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_make_transient_cache_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32, i32, i32, i32, i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"invalid path '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cache_entry* @make_transient_cache_entry(i32 %0, %struct.object_id* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.cache_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.cache_entry*, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.object_id* %1, %struct.object_id** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @verify_path(i8* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %4
  %17 = call i32 @_(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @error(i32 %17, i8* %18)
  store %struct.cache_entry* null, %struct.cache_entry** %5, align 8
  br label %47

20:                                               ; preds = %4
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @strlen(i8* %21)
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call %struct.cache_entry* @make_empty_transient_cache_entry(i32 %23)
  store %struct.cache_entry* %24, %struct.cache_entry** %10, align 8
  %25 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  %26 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %25, i32 0, i32 4
  %27 = load %struct.object_id*, %struct.object_id** %7, align 8
  %28 = call i32 @oidcpy(i32* %26, %struct.object_id* %27)
  %29 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  %30 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = load i8*, i8** %8, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @memcpy(i32 %31, i8* %32, i32 %33)
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @create_ce_flags(i32 %35)
  %37 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  %38 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* %11, align 4
  %40 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  %41 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 4
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @create_ce_mode(i32 %42)
  %44 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  %45 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %44, i32 0, i32 1
  store i32 %43, i32* %45, align 4
  %46 = load %struct.cache_entry*, %struct.cache_entry** %10, align 8
  store %struct.cache_entry* %46, %struct.cache_entry** %5, align 8
  br label %47

47:                                               ; preds = %20, %16
  %48 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  ret %struct.cache_entry* %48
}

declare dso_local i32 @verify_path(i8*, i32) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local %struct.cache_entry* @make_empty_transient_cache_entry(i32) #1

declare dso_local i32 @oidcpy(i32*, %struct.object_id*) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @create_ce_flags(i32) #1

declare dso_local i32 @create_ce_mode(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
